compiler/testData/multiplatform/missingOverload/output.txt
-- Common --
Exit code: OK
Output:
compiler/testData/multiplatform/missingOverload/common.kt:1:1: warning: 'expect'/'actual' classes (including interfaces, objects, annotations, enums, and 'actual' typealiases) are in Beta. You can use -Xexpect-actual-classes flag to suppress this warning. Also see: https://youtrack.jetbrains.com/issue/KT-61573
expect class Foo {
^^^^^^

-- JVM --
Exit code: COMPILATION_ERROR
Output:
compiler/testData/multiplatform/missingOverload/jvm.kt:1:14: error: 'actual class Foo : Any' has no corresponding members for expected class members:

    expect fun f(a: Any): Unit

    The following declaration is incompatible because parameter types are different:
        actual fun f(s: String): Unit

actual class Foo {
             ^^^
